fix timer text-alignment

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -59,5 +59,5 @@
     font-family: 'Lato';
     font-size: 30px;
     color: #ffffff;
-    text-align: right;
+    text-align: center;
 }
